<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".TelaDeConfirmacaoChequeEspecial">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ativa_o_de_cheque_especial"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textView2"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="299dp"
        android:layout_height="66dp"
        android:text="@string/parabens_voce_recebeu_aprova_o_para_at_r_250"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneysack" />


    <CheckBox
        android:id="@+id/checkBox2"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="327dp"
        android:layout_height="75dp"
        android:buttonTint="#5DBCD2"
        android:text="@string/eu_concordo_com_as_informa_es_de_consumidor_de_credito_e_com_os_termos_e_condi_es_de_cheque_especial_e_entendo_que_serei_cobrado_8_9"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <Button
        android:id="@+id/activateOverdraft"
        android:layout_width="353dp"
        android:layout_height="60dp"
        android:backgroundTint="#5DBCD2"
        android:text="@string/ativar_credito_em_cheque_especial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <ImageView
        android:id="@+id/moneysack"
        android:layout_width="293dp"
        android:layout_height="232dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        app:srcCompat="@mipmap/ic_money_sack_foreground" />




</androidx.constraintlayout.widget.ConstraintLayout>