<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TrackLimit">

    <ImageView
        android:id="@+id/blue_sprit"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#5CE1E6" />

    <TextView
        android:id="@+id/textView-pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:text="Cheque Especial"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_mylimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:text="Meu Limite"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textView_cur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:text="current"
        android:textSize="25sp"
        android:textStyle="bold" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_marginVertical="15dp">
    <TextView
        android:id="@+id/textView_currentUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="Voce já usou "
        android:textColor="#333"
        android:textSize="18sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/textView_usage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333"
        android:fontFamily="@font/nunito"
        android:text="usage"
        android:textSize="18sp" />
</LinearLayout>





    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:maxHeight="10dp"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/seekbar_dot" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/text_view_min"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="left"
            android:text="0"
            android:textSize="12sp" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/textView_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="right"
            android:textSize="12sp" />

    </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_with_one_word_shape"
        android:fontFamily="@font/nunito"
        android:text="Salvar"
        android:textColor="#000"
        android:textSize="18sp" />

</RelativeLayout>


    <TextView
        android:id="@+id/textView_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:text="Parcele a dívida para disponibilizar o limite"
        android:textColor="#000000"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/textView-interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:layout_marginRight="16dp"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:text="Taxa de juros anual nominal de 8,9%."
        android:textColor="#666"
        android:textSize="12sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/button_installment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/big_button_shape"
            android:fontFamily="@font/nunito"
            android:layout_gravity="center_horizontal|center"
            android:text="Parcelar Dívida"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancelCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:layout_gravity="center_horizontal|center"
            android:text="Cancelar Cheque Especial"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:background="@null"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="#ff5050"
            android:textSize="16sp" />
    </LinearLayout>



</LinearLayout>