...
        android:fontFamily="@font/nunito"
        android:text="Para iniciar a aplicação insira seu nome abaixo:"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_startName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Nome"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />
...
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_marginBottom="32dp"
        >
        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/big_button_shape"
            android:fontFamily="@font/nunito"
            android:gravity="center_vertical"
...
