...
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/eligibility_button"
        android:layout_width="198dp"
        android:layout_height="43dp"
        android:background="#55b6a6"
        android:text="Checar eligibilidade"
        android:textColor="@android:color/white"
        android:textSize="18sp"
...
